// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Counter length 0 1`] = `
<div>
  <small
    class="mb-2 text-right text-gray-700"
  />
</div>
`;

exports[`Counter length 123 1`] = `
<div>
  <small
    class="mb-2 text-right text-gray-700"
  >
    123
  </small>
</div>
`;

exports[`Counter length 300, source 1`] = `
<div>
  <small
    class="mb-2 text-right text-gray-700"
  >
    300
  </small>
</div>
`;

exports[`Counter length 300, tweet 1`] = `
<div>
  <small
    class="mb-2 text-right text-red-500 "
  >
    300
  </small>
</div>
`;
